# spoj

./: .gitignore  LICENSE  README.md
problems/ONP/: CMakeLists.txt  merged-main.cc
problems/ONP/include/: Associativity.hpp  DefaultTokenProvider.hpp  ITokenProvider.hpp  Operator.hpp  RPN.hpp
problems/ONP/src/: DefaultTokenProvider.cc  Operator.cc  RPN.cc  main.cc
problems/ONP/test/: CMakeLists.txt  DefaultTokenProviderTest.cc  OperatorTest.cc  RPNTest.cc
problems/PALIN/: CMakeLists.txt
problems/PALIN/src/: main.cc
problems/PRIME1/: CMakeLists.txt
problems/PRIME1/include/: PrimeGenerator.h
problems/PRIME1/src/: PrimeGenerator.cc  main.cc
problems/PRIME1/test/: CMakeLists.txt  PrimeGeneratorTest.cc
problems/TEST/: CMakeLists.txt
problems/TEST/src/: main.cc
